--- a/package.json
+++ b/package.json
@@ -1,27 +1,62 @@
 {
-  "name": "just-travel",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "react": "^18",
-    "react-dom": "^18",
-    "next": "14.1.0"
-  },
-  "devDependencies": {
-    "typescript": "^5",
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "autoprefixer": "^10.0.1",
-    "postcss": "^8",
-    "tailwindcss": "^3.3.0",
-    "eslint": "^8",
-    "eslint-config-next": "14.1.0"
-  }
+    "name": "just-travel",
+    "version": "0.1.0",
+    "private": true,
+    "scripts": {
+        "dev": "next dev",
+        "build": "next build",
+        "start": "next start",
+        "lint": "next lint",
+        "lint:fix": "next lint --fix",
+        "format": "prettier --write src/**/*.{js,jsx,ts,tsx}",
+        "storybook": "storybook dev -p 6006",
+        "build-storybook": "storybook build",
+        "plop": "plop",
+        "test": "vitest",
+        "test:ui": "vitest --ui",
+        "test:ui:watch": "vitest --watch",
+        "test:coverage": "vitest --coverage"
+    },
+    "dependencies": {
+        "clsx": "^2.1.0",
+        "next": "14.1.0",
+        "react": "^18",
+        "react-dom": "^18",
+        "tailwind-merge": "^2.2.1",
+        "tailwind-variants": "^0.1.20"
+    },
+    "devDependencies": {
+        "@storybook/addon-essentials": "^7.6.13",
+        "@storybook/addon-interactions": "^7.6.13",
+        "@storybook/addon-links": "^7.6.13",
+        "@storybook/addon-onboarding": "^1.0.11",
+        "@storybook/blocks": "^7.6.13",
+        "@storybook/nextjs": "^7.6.13",
+        "@storybook/react": "^7.6.13",
+        "@storybook/test": "^7.6.13",
+        "@testing-library/react": "^14.2.1",
+        "@types/node": "^20",
+        "@types/react": "^18",
+        "@types/react-dom": "^18",
+        "@typescript-eslint/eslint-plugin": "^6.21.0",
+        "@typescript-eslint/parser": "^6.21.0",
+        "@vitejs/plugin-react": "^4.2.1",
+        "@vitest/ui": "^1.2.2",
+        "autoprefixer": "^10.0.1",
+        "eslint": "^8",
+        "eslint-config-next": "14.1.0",
+        "eslint-config-prettier": "^9.1.0",
+        "eslint-config-universe": "^12.0.0",
+        "eslint-plugin-prettier": "^5.1.3",
+        "eslint-plugin-react": "^7.33.2",
+        "eslint-plugin-storybook": "^0.6.15",
+        "jsdom": "^24.0.0",
+        "plop": "^4.0.1",
+        "postcss": "^8",
+        "prettier": "^3.2.5",
+        "storybook": "^7.6.13",
+        "tailwindcss": "^3.3.0",
+        "typescript": "^5",
+        "vitest": "^1.2.2"
+    }
 }
