--- a/package.json
+++ b/package.json
@@ -18,12 +18,13 @@
         "test:coverage": "vitest --coverage"
     },
     "dependencies": {
+        "@phosphor-icons/react": "^2.0.15",
+        "class-variance-authority": "^0.7.0",
         "clsx": "^2.1.0",
         "next": "14.1.0",
         "react": "^18",
         "react-dom": "^18",
-        "tailwind-merge": "^2.2.1",
-        "tailwind-variants": "^0.1.20"
+        "tailwind-merge": "^2.2.1"
     },
     "devDependencies": {
         "@storybook/addon-essentials": "^7.6.13",
