config vitest suit

--- a/package.json
+++ b/package.json
@@ -13,12 +13,13 @@
         "build-storybook": "storybook build",
         "plop": "plop",
         "test": "vitest",
-        "test:ui": "vitest --ui",
+        "test:ui": "vitest --ui --coverage.enabled=true",
         "test:ui:watch": "vitest --watch",
         "test:coverage": "vitest --coverage"
     },
     "dependencies": {
         "@phosphor-icons/react": "^2.0.15",
+        "@radix-ui/react-checkbox": "^1.0.4",
         "class-variance-authority": "^0.7.0",
         "clsx": "^2.1.0",
         "next": "14.1.0",
@@ -35,13 +36,17 @@
         "@storybook/nextjs": "^7.6.13",
         "@storybook/react": "^7.6.13",
         "@storybook/test": "^7.6.13",
+        "@testing-library/jest-dom": "^6.4.2",
         "@testing-library/react": "^14.2.1",
+        "@testing-library/user-event": "^14.5.2",
         "@types/node": "^20",
         "@types/react": "^18",
         "@types/react-dom": "^18",
         "@typescript-eslint/eslint-plugin": "^6.21.0",
         "@typescript-eslint/parser": "^6.21.0",
         "@vitejs/plugin-react": "^4.2.1",
+        "@vitest/coverage-istanbul": "^1.2.2",
+        "@vitest/coverage-v8": "^1.2.2",
         "@vitest/ui": "^1.2.2",
         "autoprefixer": "^10.0.1",
         "eslint": "^8",
