--- a/package.json
+++ b/package.json
@@ -20,11 +20,15 @@
     "dependencies": {
         "@phosphor-icons/react": "^2.0.15",
         "@radix-ui/react-checkbox": "^1.0.4",
+        "@reduxjs/toolkit": "^2.2.0",
+        "axios": "^1.6.7",
         "class-variance-authority": "^0.7.0",
         "clsx": "^2.1.0",
         "next": "14.1.0",
+        "next-seo": "^6.4.0",
         "react": "^18",
         "react-dom": "^18",
+        "react-redux": "^9.1.0",
         "tailwind-merge": "^2.2.1"
     },
     "devDependencies": {
