--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
         "react": "^18",
         "react-dom": "^18",
         "react-redux": "^9.1.0",
-        "tailwind-merge": "^2.2.1"
+        "tailwind-merge": "^2.2.1",
+        "zod": "^3.22.4"
     },
     "devDependencies": {
         "@storybook/addon-essentials": "^7.6.13",
