--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
         "storybook": "storybook dev -p 6006",
         "build-storybook": "storybook build",
         "plop": "plop",
-        "test": "vitest",
+        "test": "vitest --coverage.enabled=true",
         "test:ui": "vitest --ui --coverage.enabled=true",
         "test:ui:watch": "vitest --watch",
         "test:coverage": "vitest --coverage"
